<resources>
    <string name="app_name">Beevou Scanner</string>
    <string name="scan">Scan</string>
    <string name="scan_only_qr_codes">Scan only QR Codes</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="My_Vouchers">My Vouchers</string>
    <string name="Scan_Vouchers">Scan a Voucher</string>
    <string name="Launch_Voucher">Launch a Voucher</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_discount">Redeem</string>
    <string name="title_activity_identity_alert">IdentityAlert</string>
    <string name="title_activity_pin_interface">PinInterface</string>
    <string name="title_activity_voucherslist">voucherslist</string>
    <string name="title_activity_voucher">Voucher</string>
    <string name="title_activity_voucher_transfer">voucherTransfer</string>
    <string name="title_activity_voucher_delete">delete voucher</string>
    <string name="title_activity_voucher_pin">VoucherPin</string>
    <string name="title_activity_voucher_pin_reset">VoucherPinReset</string>
    <string name="title_activity_launch_voucher">LaunchVoucher</string>
    <string name="title_activity_fast__launch__step2">Fast_Launch_Step2</string>
    <string name="title_activity_launched_voucher">Launched Voucher</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got a message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="label">Beevou</string>
    <string name="ui_activity_title">Sign-in</string>
    <string name="ui_activity_authenticating">Authenticating\u2026</string>
    <string name="login_activity_username_label">Username</string>
    <string name="login_activity_password_label">Password</string>
    <string name="login_activity_ok_button">Sign in</string>
    <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Sample SyncAdapter account is
        required. Please try again. </string>
    <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <string name="login_activity_newaccount_text">Sign in to your Sample SyncAdapter account. </string>
    <string name="sign_in_button_label">Sign in</string>
    <string name="back_button_label">Back</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="profile_action">Sample profile</string>
    <string name="view_profile">View Profile</string>
    <string name="msg_default_status">Scan Beevou Voucher Code</string>
    <string name="manual_button_label">Enter Code Manually</string>
    <string name="blank_label"></string>
    <string name="contents_text">Plain text</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">sms</string>
    <string name="voucher_info">Voucher Info</string>
    <string name="voucher_lock">Set Pin</string>
    <string name="voucher_transfer">Transfer</string>
    <string name="voucher_delete">Delete</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_barcode">Barcode</string>
    <string name="title_activity_user_basic_data">UserBasicData</string>
    <string name="title_activity_user_public_data">UserPublicData</string>
    <string name="title_activity_user_security_data">UserSecurityData</string>
    <string name="title_activity_user_profile_data">UserProfileData</string>
    <string name="title_activity_user_my_account">UserMyAccount</string>
    <string name="title_activity_view_voucher">ViewVoucher</string>
    <string name="title_activity_beevou_notifications">BeevouNotifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_manual_code">ManualCode</string>
    <string name="title_activity_scan_camera">ScanCamera</string>
    <string name="title_activity_voucher_view">VoucherView</string>
    <string name="getting_unreaded_notifications">Getting unread notifications</string>
    <string name="no_network_connection">No network connection</string>
    <string name="rear_facing_camera_unavailable">Rear Facing Camera Unavailable</string>
    <string name="your_device_registred_with_gcm">Your device registred with GCM</string>
    <string name="logging_into_beevou">Logging into Beevou</string>
    <string name="incorrect_username_password">Incorrect username/password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_message_">"New Message: "</string>
    <string name="deleting_voucher_">Deleting Voucher...</string>
    <string name="invalid_authtokentype">invalid authTokenType</string>
    <string name="barcode_encoding_failed_">Barcode encoding failed.</string>
    <string name="no_valid_data_to_encode_">No valid data to encode.</string>
    <string name="invalid_url_">"invalid url: "</string>
    <string name="post_failed_with_error_code_">"Post failed with error code "</string>
    <string name="getting_beneficiary_data_from_server_">Getting Beneficiary Data from server...</string>
    <string name="are_you_sure_you_want_to_send_a_voucher_to_s_">Are you sure you want to send a voucher to %s ?</string>
    <string name="error">Error</string>
    <string name="you_must_activate_the_this_person_gave_me_permission_check_box_to_continue_">You must activate the \'this person gave me permission\' check box to continue...</string>
    <string name="message">Message</string>
    <string name="you_have_to_introduce_a_valid_email_address_to_launch_the_voucher">You have to introduce a valid email address to launch the voucher</string>
    <string name="no_email_found_for_contact_">No email found for contact.</string>
    <string name="getting_templates_from_server_">Getting Templates from server...</string>
    <string name="success">Success</string>
    <string name="there_was_an_error_at_the_server_side_trying_to_launch_the_voucher_the_voucher_has_not_been_launch_please_try_again_and_if_the_problem_persits_in_time_contact_beevou_support">There was an error at the server side trying to launch the voucher, the voucher has not been launch, please try again, and if the problem persists in time, contact beevou support</string>
    <string name="not_used_yet">Not used yet</string>
    <string name="_1_seal_of_s_left">1 seal of %s left</string>
    <string name="seals_of_s_left">seals of %s left</string>
    <string name="_1_use_left_of_s">1 use left of %s</string>
    <string name="uses_left_of_s">uses left of %s</string>
    <string name="this_voucher_is_blocked_due_to_pin_violation">This voucher is blocked due to PIN violation</string>
    <string name="this_voucher_is_blocked_by_the_issuer">This voucher is blocked by the issuer</string>
    <string name="this_voucher_has_been_discounted">This voucher has been redeemed</string>
    <string name="discounted_on_s_at">Redeemed on %s at</string>
    <string name="discounted_on_s">Redeemed on %s</string>
    <string name="this_voucher_has_been_rejected_by_the_beneficiary">This voucher has been rejected by the beneficiary</string>
    <string name="this_voucher_is_out_of_date">This voucher is out of date</string>
    <string name="this_voucher_is_pending_for_transfer_aceptation">This voucher is pending for transfer aceptation</string>
    <string name="are_you_sure_you_want_to_delete_this_voucher_">Are you sure you want to delete this voucher?</string>
    <string name="are_you_sure_you_want_to_send_to_the_beneficiary_this_voucher_again_">Are you sure you want to send to the beneficiary this voucher again?</string>
    <string name="are_you_sure_you_want_to_lock_this_voucher_">Are you sure you want to lock this voucher?</string>
    <string name="are_you_sure_you_want_to_unlock_this_voucher_">Are you sure you want to unlock this voucher?</string>
    <string name="blocking_voucher_">Blocking Voucher...</string>
    <string name="re_sending_voucher_">Re-sending Voucher...</string>
    <string name="unloking_voucher_">Unlocking Voucher...</string>
    <string name="the_voucher_has_been_deleted_succesfully">The voucher has been succesfully deleted </string>
    <string name="there_was_an_error_trying_to_delete_the_voucher_please_contact_beevou_for_more_information">There was an error trying to delete the voucher, please contact Beevou for more information</string>
    <string name="the_voucher_has_been_locked_succesfully">The voucher has been succesfully locked </string>
    <string name="there_was_an_error_trying_to_lock_the_voucher_please_contact_beevou_for_more_information">There was an error trying to lock the voucher, please contact Beevou for more information</string>
    <string name="the_voucher_has_been_sent_succesfully">The voucher has been succesfully sent </string>
    <string name="there_was_an_error_trying_to_send_the_voucher_please_contact_beevou_for_more_information">There was an error trying to send the voucher, please contact Beevou for more information</string>
    <string name="discounted">Redeemed</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="settings">Settings</string>
    <string name="issued_by_xxxxxxxx">Issued by XXXXXXXX</string>
    <string name="xxrd_readed_of_xx">XXrd reads from XX</string>
    <string name="xx_days_left">XX days left</string>
    <string name="beevou_account">BEEVOU ACCOUNT</string>
    <string name="user">user</string>
    <string name="log_out">Log Out</string>
    <string name="security_configuration">Security Configuration</string>
    <string name="automatic_login">Automatic Login</string>
    <string name="this_month_issue_credits">This Month Issue Credits</string>
    <string name="unlink_device">Unlink device</string>
    <string name="about">ABOUT</string>
    <string name="app_version">App Version</string>
    <string name="title">title</string>
</resources>