<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/voucher_list_item"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/voucher_list_item_degraded"
    android:orientation="horizontal" >
    
       <LinearLayout
           android:id="@+id/mainLayout"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content" 
           android:padding="3dp"
           >

           <ImageView
               android:id="@+id/imageView1"
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_margin="3dp"
               android:src="@drawable/noimagevoucher"
               android:padding="3dp"
               android:background="#FFFFFF" />
           
       <LinearLayout
     android:layout_width="fill_parent"
      android:layout_height="fill_parent"
       android:orientation="vertical" 
       android:layout_weight="9">

           <TextView
               android:id="@+id/title"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:text="@string/title"
               android:layout_marginLeft="2dip"
               android:ellipsize="end"
               android:textStyle="bold"
               android:maxLines="1"
               android:layout_weight="1"
              android:textColor="#000000"
               android:textAppearance="?android:attr/textAppearanceMedium" />

           <TextView
                   android:id="@+id/issuer"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:layout_margin="3dp"
                   android:layout_weight="5"
                   android:background="@drawable/rounded_gray"
                   android:maxLines="3"
                   android:padding="3dp"
                   android:text="@string/issued_by_xxxxxxxx"
                   android:textColor="#FFFFFF"
                   android:textSize="12sp"
                   android:textStyle="italic" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1" >

<LinearLayout
     android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
       android:orientation="vertical" 
       android:layout_weight="5">
               
               
               <TextView
                   android:id="@+id/cumulativeStatus"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:layout_margin="3dp"
                   android:layout_weight="5"
                   android:background="@drawable/rounded_blue"
                   android:maxLines="1"
                   android:padding="3dp"
                   android:text="@string/xxrd_readed_of_xx"
                   android:textColor="#FFFFFF"
                   android:textSize="12sp"
                   android:textStyle="italic" />

               <TextView
                   android:id="@+id/discountDate"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:layout_margin="3dp"
                   android:layout_weight="5"
                   android:background="@drawable/rounded_green"
                   android:maxLines="1"
                   android:ellipsize="end"
                   android:padding="3dp"
                   android:text="@string/xx_days_left"
                   android:textColor="#FFFFFF"
                   android:textSize="12sp"
                   android:textStyle="italic" />

               

               </LinearLayout>

               <TextView
                   android:id="@+id/value"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentEnd="true"
                   android:layout_weight="5"
                   android:gravity="right"
                   android:maxLines="1"
                   android:text="$10"
                   android:textColor="#256E7D"
                   android:textSize="35sp"
                   android:textStyle="bold" />

           </LinearLayout>

       </LinearLayout>
   </LinearLayout>

   <TextView
       android:id="@+id/statusText"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:ellipsize="end"
       android:gravity="center|center_vertical"
       android:maxLines="1"
       android:text="@string/discounted"
       android:textColor="#D14130"
       android:textSize="40dip"
       android:textStyle="bold" />

</RelativeLayout>